--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="calibration" href="/tabs/calibration">
       <ion-icon aria-hidden="true" name="eye"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="home" href="/tabs/home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="survey" href="/tabs/survey">
       <ion-icon aria-hidden="true" name="reader"></ion-icon>
-        </ion-tab-button>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
