feat: clickListener of Start_Calibration change to new component

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,15 +1,15 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="calibration" href="/tabs/calibration">
+    <ion-tab-button tab="calibration">
       <ion-icon aria-hidden="true" name="eye"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="home" href="/tabs/home">
+    <ion-tab-button tab="home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="survey" href="/tabs/survey">
+    <ion-tab-button tab="survey">
       <ion-icon aria-hidden="true" name="reader"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
