--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,35 +1,2 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Calibration
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-nav [root]="component"></ion-nav>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Calibration</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <ion-grid class="ion-align-items-center">
-    <ion-row class="ion-justify-content-center">
-      <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="startCalibration()">
-          Start calibration
-          <ion-icon slot="start" name="play"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="deleteCalibration()">
-          Delelte calibration
-          <ion-icon slot="start" name="trash"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-</ion-content>
