feat: switch navigation inside tab1 to be ion-router-outlet

--- a/src/app/tab1/menu/menu.page.html
+++ b/src/app/tab1/menu/menu.page.html
@@ -5,16 +5,15 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <ion-grid class="ion-align-items-center">
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-nav-link router-direction="forward" [component]="component">
-          <ion-button shape="round">
+          <ion-button routerLink="/calibration/calibration" shape="round">
             Start calibration
             <ion-icon slot="start" name="play"></ion-icon>
           </ion-button>
-        </ion-nav-link>
       </ion-col>
     </ion-row>
     <ion-row class="ion-justify-content-center">
