--- a/src/app/tab1/calibration/calibration.page.html
+++ b/src/app/tab1/calibration/calibration.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/calibration"></ion-back-button>
+    <ion-buttons slot="start" (click)="goBack()">
+      <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
     </ion-buttons>
     <ion-title>Calibration</ion-title>
   </ion-toolbar>
