--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -18,7 +18,7 @@
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-button shape="round">
+        <ion-button shape="round" (click)="deleteCalibration()">
           Delete calibration
           <ion-icon slot="start" name="trash"></ion-icon>
         </ion-button>
