refactor: remove ion-grid and use css grind instead to use for loops

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -30,7 +30,7 @@
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="showInformation()">
+        <ion-button routerLink="/home/information" shape="round" >
           Information
           <ion-icon slot="start" name="information-circle"></ion-icon>
         </ion-button>
