--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+  <canvas id="plotting_canvas" class="plotting_canvas" width="500px" height="500px" style="border: 1px solid black;"></canvas>
 </ion-app>
