--- a/src/app/tab1/calibration/calibration.page.html
+++ b/src/app/tab1/calibration/calibration.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <canvas class="plotting_canvas"></canvas>
+  <canvas id="plotting_canvas" class="plotting_canvas" width="500px" height="500px"></canvas>
   <div class="container_buttons">
     @for(i of [0,1,2,3,4,5,6,7,8]; track $index) {
       @if (i == 4) {
