feat: add tutorial page and refactor the information page to not my testing stuff

--- a/src/app/tab2/tutorial/tutorial.page.html
+++ b/src/app/tab2/tutorial/tutorial.page.html
@@ -3,11 +3,12 @@
     <ion-buttons slot="start" (click)="goBack()">
       <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
     </ion-buttons>
-    <ion-title>Information</ion-title>
+    <ion-title>Tutorial</ion-title>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-text>
-    This is a placeholder for the information screen which should show the user information about the application and its camera usage and data collection.
+    This is a placeholder for the tutorial.
   </ion-text>
 </ion-content>
