--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -22,7 +22,7 @@
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="showTutorial()">
+        <ion-button routerLink="/home/tutorial" shape="round">
           Tutorial
           <ion-icon slot="start" name="easel"></ion-icon>
         </ion-button>
