--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -24,7 +24,7 @@
     </ion-row>
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-button shape="round" (click)="startSurvey()">
+        <ion-button routerLink="/survey/start" shape="round">
           Start survey
           <ion-icon slot="start" name="play"></ion-icon>
         </ion-button>
