--- a/src/app/tab3/survey/survey.page.html
+++ b/src/app/tab3/survey/survey.page.html
@@ -1,13 +1,56 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start" (click)="goBack()">
+      <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+    </ion-buttons>
     <ion-title>Survey</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Survey</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid class="container_grid">
+    <ion-row>
+      <ion-col class="ion-text-center">
+        <ion-text>This is an example Text which in best case describes one question for the survey which can then be
+          answered from the user.</ion-text>
+      </ion-col>
+    </ion-row>
+    <ion-radio-group class="radio_group" value="3">
+      <ion-row>
+        <ion-col class="ion-padding-start ion-padding-end">
+          <ion-radio justify="start" 
+          value="1" labelPlacement="end">1 - Strongly Disagree</ion-radio>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-start ion-padding-end">
+          <ion-radio justify="start" value="2" labelPlacement="end">2 - Disagree</ion-radio>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-start ion-padding-end">
+          <ion-radio justify="start" value="3" labelPlacement="end">3 - Neutral</ion-radio>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-start ion-padding-end">
+          <ion-radio justify="start" value="4" labelPlacement="end">4 - Agree</ion-radio>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-start ion-padding-end">
+          <ion-radio justify="start" value="5" labelPlacement="end">5 - Strongly Agree</ion-radio>
+        </ion-col>
+      </ion-row>
+    </ion-radio-group>
+    <ion-row>
+      <ion-col class="ion-text-end">
+        <ion-button (click)="goToPreviousPage()">Back</ion-button>
+      </ion-col>
+      <ion-col class="ion-text-start">
+        <ion-button (click)="goToNextPage()">Next</ion-button>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
