--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -16,12 +16,6 @@
   <ion-grid class="ion-align-items-center">
     <ion-row class="ion-justify-content-center">
       <ion-col class="ion-text-center">
-        <ion-label id="info_label">Currently not calibrated and no survey loaded.
-          Continue with calibration.</ion-label>
-      </ion-col>
-    </ion-row>
-    <ion-row class="ion-justify-content-center">
-      <ion-col class="ion-text-center">
         <ion-button routerLink="/home/tutorial" shape="round">
           Tutorial
           <ion-icon slot="start" name="easel"></ion-icon>
@@ -42,6 +36,11 @@
           Delete local data
           <ion-icon slot="start" name="trash"></ion-icon>
         </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row class="ion-justify-content-center">
+      <ion-col class="ion-text-center">
+        <ion-label id="info_label">{{globalVariablesService.infoLabel}}</ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
