feat: checkmark shown on selected survey, minor name changes

--- a/src/app/tab1/calibration/calibration.page.scss
+++ b/src/app/tab1/calibration/calibration.page.scss
@@ -118,6 +118,7 @@
   }
 
   .container_buttons {
+    padding: 10px;
     height: 100%;
     z-index: 1;
     display: grid;
@@ -131,6 +132,7 @@
   }
 
   .plotting_canvas {
+    padding: 10px;
     height: 100%;
     width: 100%;
     z-index: 0;
