--- a/src/app/tab2/information/information.page.html
+++ b/src/app/tab2/information/information.page.html
@@ -8,6 +8,8 @@
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-text>
-    This is a placeholder for the information screen which should show the user information about the application and its camera usage and data collection.
+    This application was developed as part of the master thesis "Conception and Development of a mobile Gazetracker Application". <br>
+    It uses the open source <a href="https://webgazer.cs.brown.edu">webgazer.js</a> in combination with <a href="https://ionicframework.com/">Ionic</a> to work on mobile devices in native code. <br>
+    To work as expected the application needs permission to the camera and connection to the internet. <br>
   </ion-text>
 </ion-content>
