--- a/src/app/tab3/load-survey/load-survey.page.html
+++ b/src/app/tab3/load-survey/load-survey.page.html
@@ -9,8 +9,9 @@
 
 <ion-content>
   <ion-list> 
-    <ion-item [button]="true" *ngFor="let name of names; let index" (click)="startSurvey(name)">
+    <ion-item [button]="true" *ngFor="let name of names; let index" (click)="selectSurvey(name)">
       <ion-label>{{ name }}</ion-label>
+      <ion-icon name="checkmark" *ngIf="globalVariablesService.selectedSurveyName == name"></ion-icon>
     </ion-item>
   </ion-list>
   <ion-infinite-scroll>
