fix: text size of question now fixed size

--- a/src/app/tab3/survey/survey.page.html
+++ b/src/app/tab3/survey/survey.page.html
@@ -10,7 +10,7 @@
 <ion-content [fullscreen]="true">
   <ion-grid class="container_grid">
     <ion-row>
-      <ion-col class="ion-text-center">
+      <ion-col id="questionText" class="ion-text-center">
         <ion-text>{{currentQuestion}}</ion-text>
       </ion-col>
     </ion-row>
